Updated to MIT license in package.json, added MIT license to egg.js

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "konami code"
   ],
   "author": "Mike Flynn",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/mikeflynn/egg.js/issues"
   },
